data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1936.wast
;; 7. **Test Description**:    - **Constraint Checked**: Operand integrity across branching.    - **Details**: Formulate a `br_table` test where operands are manipulated in such a way to cause divergence in stack contents when branching occurs.    - **Relation to Edge Case**: Ensures operand integrity is maintained across branches, impacting the subsequent instruction's execution path.

(assert_invalid
  (module
    (func $operand-integrity-test
      (block (result i32)
        (i32.const 42)
        (block (result i32)
          (i32.const 1)
          (br_if 1 (i32.const 0))
        )
        (i32.eqz) (drop)
      )
    )
  )
  "type mismatch"
)